Change branding from Ransford to Ryder
Updated branding from 'Ransford' to 'Ryder' throughout the About Us page, including team member names and footer.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ransford Project Real Estates - About Us</title>
+    <title>Ryder Project Real Estates - About Us</title>
     <meta name="description" content="Learn about Monarch Real Estates' services, team, and career opportunities.">
 
 
@@ -82,7 +82,7 @@
                 </div>
                 <div class="team-member fade-in">
                     <img src="C:\Users\OGRyder\Desktop\website\R.jpg" alt="Design Director">
-                    <h4>Ransford Arthur</h4>
+                    <h4>Ryder OG</h4>
                     <p>Director of Design & Architecture</p>
                     <small style="color: #666;">Visionary creative force.</small>
                 </div>
@@ -101,7 +101,7 @@
         <div class="container">
             <h2 class="section-title fade-in">Career Opportunities</h2>
             <div class="about-card fade-in" style="max-width: 800px; margin: 0 auto; background-color: var(--background-light); border-left: 5px solid var(--secondary-color);">
-                <h3>Join the Ransford Family</h3>
+                <h3>Join the Ryder Family</h3>
                 <p>Are you a highly motivated professional dedicated to excellence in real estate, design, or administration? Monarch is continually seeking talented individuals who share our commitment to luxury and unparalleled client service.</p>
                 <ul style="padding-left: 20px; margin-top: 15px;">
                     <li><i class="fa-solid fa-check" style="color: var(--primary-color); margin-right: 10px;"></i> Competitive Commission Structure</li>
@@ -115,12 +115,13 @@
 
     <footer>
         <div class="footer-bottom">
-            &copy; 2025 Ransford Properties and Design. All rights reserved.
+            &copy; 2025 Ryder Properties and Design. All rights reserved.
         </div>
     </footer>
 
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
