--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ransford Project Real Estates - Contact Us</title>
-    <meta name="description" content="Contact Monarch Real Estates for inquiries about properties, design, or investment consulting.">
+    <title>Ryder Project Real Estates - Contact Us</title>
+    <meta name="description" content="Contact Ryder Real Estates for inquiries about properties, design, or investment consulting.">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -58,10 +58,10 @@
 
                 <div class="social-links fade-in">
                     <h3>Connect With Us</h3>
-                    <a href="#" aria-label="Ransford Real Estates on Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Ransford Real Estates on X (Twitter)"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="Ransford Real Estates on Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="Ransford Real Estates on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" aria-label="RyderReal Estates on Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Ryder Real Estates on X (Twitter)"><i class="fab fa-twitter"></i></a>
+                    <a href="#" aria-label="Ryder Real Estates on Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="Ryder Real Estates on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -69,12 +69,13 @@
 
     <footer>
         <div class="footer-bottom">
-            &copy; 2025 Ransford Properties and Design. All rights reserved.
+            &copy; 2025 Ryder Properties and Design. All rights reserved.
         </div>
     </footer>
 
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
